# Projects

./: README.md  main.c
AbstractVM/: AbstractVM.cpp  AbstractVM.hpp  Assembly.cpp  CMakeLists.txt  Exception.cpp  Exception.hpp  IOperand.hpp  Lexer.cpp  Logger.cpp  Logger.hpp  Makefile  Operand.hpp  OperandFactory.cpp  OperandFactory.hpp  Parser.cpp  Parser.hpp  a.out  check  main.cpp
AbstractVM/inc/: Lexer.hpp  Operand.hpp  OperandFactory.hpp  Parser.hpp
AbstractVM/src/: Exception.cpp  OperandFactory.cpp  Parser.cpp  main.cpp
ComputorV1/: CMakeLists.txt  ComputorV1.cpp  ComputorV1.hpp  Makefile  Parser.cpp  Parser.hpp  a.out  main.cpp  math_functions.hpp
ComputorV1/inc/: ComputorV1.hpp
ComputorV1/src/: ComputorV1.cpp  math_functions.cpp
ExpertSystem/: CMakeLists.txt  ExpertSystem.cpp  ExpertSystem.hpp  Lexer.cpp  Lexer.hpp  Makefile  Parser.cpp  Parser.hpp  Validator.cpp  Validator.hpp  a.out  bigTest  main.cpp  system  testFile
ExpertSystem/inc/: Parser.hpp
ExpertSystem/src/: ExpertSystem.cpp  Parser.cpp
FdF/: CMakeLists.txt  Makefile  fdf
FdF/includes/: fdf.h
FdF/src/: fdf.c  ft_atoi_hex.c  isometric.c  keyhooks.c  matrices.c  other_matrices.c  picture_drawing.c  validation.c
Fractol/: CMakeLists.txt  Makefile  Makefile_mac  fractol
Fractol/includes/: fractol.h
Fractol/src/: common.c  fractal.c  fractol.c  ft_itoa_double.c  hooks.c  hooks_extra.c  julia_3_4.c
RESERVE/Client_part/: main.cpp
RESERVE/HTTP_server/: CMakeLists.txt  config.xml
RESERVE/HTTP_server/includes/: Request.hpp  Response.hpp  Server.hpp  http.hpp
RESERVE/HTTP_server/src/: Request.cpp  Response.cpp  Server.cpp  main.cpp  parse_config.cpp  parse_request.cpp
RESERVE/LED_Blinker/: .cproject  .mxproject  .project  blink_2.ioc  mx.scratch
RESERVE/LED_Blinker/Inc/: main.h  usart.h
RESERVE/LED_Blinker/Src/: gpio.c  main.c  stm32f3xx_it.c  usart.c
RESERVE/Multi_threaded_downloader/: Makefile  config.xml  download.c  main.c  std.h
RESERVE/Simple_character_device_driver/: dummy.c
RESERVE/Single_threaded_downloader/: config.xml  download.c  main.c  std.h
RESERVE/Timeit/: CMakeLists.txt  main.c  timeit.h
RESERVE/message_queue/: CMakeLists.txt  a.out
RESERVE/message_queue/common/: common.h  message_info.pb.cc  message_info.pb.h
RESERVE/message_queue/src_server/: server.cpp
RESERVE/protobufffs/: book  create_book  file.pb.cc  file.pb.h  main.c  read.cpp  read_book
RESERVE/tcp_chat/: CMakeLists.txt
RESERVE/tcp_chat/includes/: Client.hpp  Server.hpp  User.hpp  tcp.hpp
RESERVE/tcp_chat/src/: Client.cpp  Server.cpp  Server_control.cpp  User.cpp  arguments.cpp  main.cpp
RTv1/: CMakeLists.txt  Makefile  RTv1
RTv1/includes/: rtv1.h
RTv1/minilibx/: ._=README=  ._Makefile.gen  ._Makefile.mk  ._configure  ._man  ._mlx_destroy_image.c  ._mlx_expose_hook.c  ._mlx_get_color_value.c  ._mlx_get_data_addr.c  ._mlx_hook.c  ._mlx_int_anti_resize_win.c  ._mlx_int_set_win_event_mask.c  ._mlx_int_str_to_wordtab.c  ._mlx_lib_xpm.c  ._mlx_loop.c  ._mlx_pixel_put.c  ._mlx_xpm.c  ._mlx_xpm.c.ok  ._test
RTv1/minilibx/man/: ._man1  ._man3
RTv1/minilibx/man/man1/: ._mlx_new_window.1
RTv1/minilibx/man/man3/: ._mlx.1  ._mlx_new_image.1  ._mlx_pixel_put.1
RTv1/minilibx/test/: ._Makefile.gen  ._main.c  ._new_win.c
RTv1/src/: common.c  composed.c  cone.c  cylinder.c  hooks.c  main.c  matrices.c  matrix_func.c  object_parameters.c  objects_intersection.c  plane.c  sphere.c  vector_count.c  vector_operations_1.c  vector_operations_2.c
Wolf3d/: CMakeLists.txt  Makefile  Makefile_linux  author  wolf3d
Wolf3d/includes/: wolf3d.h
Wolf3d/libft/: Makefile  get_next_line.c
Wolf3d/maps/: Makefile  level_1  level_2
Wolf3d/src/: environment.c  image.c  keyhooks.c  levels.c  main.c  map_reading.c  matrix.c  movement.c  raycasting.c  sprites.c  sprites_definition.c  textures.c  vector_oper.c
Wolf3d/textures/: 10points.XPM  2points.XPM  barrel.xpm  bluestone.xpm  colorstone.xpm  eagle.XPM  exit.XPM  greystone.xpm  mossy.xpm  pillar.xpm  redbrick.xpm  secret.xpm  wood.xpm
ft_malloc/: Makefile  run.sh  test.c  test0  test0.c  test1  test1.c  test2.c  test3.c  test4.c  test5.c
ft_malloc/inc/: ft_malloc.h
ft_malloc/libft/: Makefile  ft_itoa_base.c  ft_memccpy.c  get_next_line.c
ft_malloc/src/: ft_free.c  ft_malloc.c  ft_malloc_utility.c  ft_ouput_info.c  ft_page.c  ft_realloc.c
ft_ssl_md5/: .cproject  .project  CMakeLists.txt  Makefile  a.out  ft_ssl  ft_ssl.h  ft_ssl_md5.c  ft_ssl_md5.h  ft_ssl_md5_transform.c  ft_ssl_md5_utils.c  ft_ssl_sha224.c  ft_ssl_sha256.c  ft_ssl_sha256.h  ft_ssl_sha256_transform.c  ft_ssl_sha256_utils.c  main.c  md5.c  parse_input.c  print_results.c  reading.c  sha256.c
ft_ssl_md5/Release/: makefile  sources.mk  subdir.mk
ft_ssl_md5/inc/: ft_ssl.h  ft_ssl_md5.h  ft_ssl_sha256.h
ft_ssl_md5/libft/: get_next_line.c
ft_ssl_md5/src/: ft_ssl_md5.c  ft_ssl_md5_transform.c  ft_ssl_md5_utils.c  ft_ssl_sha224.c  ft_ssl_sha256.c  ft_ssl_sha256_transform.c  ft_ssl_sha256_utils.c  main.c  parse_input.c  print_results.c  reading.c
init/network/: 01  02  03  05  06  08  09  11  13  15
init/scripts/: 01  02  03  04  log
init/system/: 01  02  03  12  13  15  16
libft/: ft_strdup.c
libft/includes/: get_next_line.h
minilibx/: ._Makefile  ._mlx.h  ._mlx_clear_window.c  ._mlx_destroy_window.c  ._mlx_flush_event.c  ._mlx_init.c  ._mlx_int.h  ._mlx_int_do_nothing.c  ._mlx_int_get_visual.c  ._mlx_int_param_event.c  ._mlx_int_wait_first_expose.c  ._mlx_key_hook.c  ._mlx_loop_hook.c  ._mlx_mouse_hook.c  ._mlx_new_image.c  ._mlx_new_window.c  ._mlx_put_image_to_window.c  ._mlx_rgb.c  ._mlx_string_put.c  ._rgb2c.pl
minilibx/test/: ._Makefile.mk  ._open.xpm  ._open24.xpm  ._open30.xpm
parser/: ._libft  Makefile  file
parser/src/: cam_and_light.c  main.c
(+12 files in other folders)
